--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 	<title>Andrew Nefsky</title>
 	<link href='http://fonts.googleapis.com/css?family=Hind:400' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/site.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"></script>
+
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.2/backbone.js"></script>
+
+
+	<script src='js/site.js'></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
