--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"></script>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.2/backbone.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.2/backbone.js"></script>
 
 
-	<script src='js/site.js'></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -19,8 +18,6 @@
 	<div id='wrapper'>
 		<header>
 			<section id='branding'>			
-				<h1>Andrew Nefsky</h1>
-				<h2>front end developer</h2>
 			</section>
 		</header>
 		<main>
@@ -78,4 +75,11 @@
 </body>
 
 </html>
+<script src='js/site.js'></script>
+<script id='test-template' type='text/template'>
+	// <h1><%= who %></h1>
+	// <h2><%= what %></h2>
+	<p>helloooo</p>
+</script>
+
 
